# python-training-2022-01-28

./: .gitignore  .pylintrc  Dockerfile  README.md  entrypoint.sh  setup.cfg
employees/: docker-compose.yaml
migrations/versions/: 0e6739c1d076_initial_migration.py
src/employees/: __init__.py  controllers.py  models.py  webcontrollers.py
src/employees/templates/: employees.html
tests/: employees.http  test_employees.py  test_employees_mock.py
