[metadata]
name = employees
version = 0.0.1
author = Istvan Viczian
description = employees demo webapp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Training360/employees-python
project_urls =
    Bug Tracker = https://github.com/Training360/employees-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.8

install_requires =
    flask==2.0.2
    flask_sqlalchemy
    psycopg2
    Flask-Migrate
    flask-marshmallow 
    marshmallow-sqlalchemy 
    marshmallow
    Flask-WTF

[options.packages.find]
where = src

[options.extras_require]
test = 
    pylint
    pylint-flask
    pylint_flask_sqlalchemy
    flake8
    pytest
    pytest-mock
prod =
    gunicorn
    gevent    